--- a/Week-03-HW.ipynb
+++ b/Week-03-HW.ipynb
@@ -20,31 +20,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current date and time : \n",
+      "2023-08-03 22:48:29\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing the proper library\n",
+    "import datetime\n",
+    "\n",
+    "# Creating a \"datetime\" object for the current date and time\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "# The first part of the string\n",
+    "print (\"Current date and time: \")\n",
+    "\n",
+    "# The actual date part, which uses .strftime to convert the date into a string and uses the %Y, %m, \n",
+    "# etc which orders the information and casts the numbers as zero padded integers in string format\n",
+    "print (now.strftime(\"%Y-%m-%d %H:%M:%S\"))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## #2 Write a function that accepts the radius of a circle and returns the area of a circle.  \n",
-    "The function for the area of a circle is pi * radius squared.  "
+    "The function for the area of a circle is pi * radius squared. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your radius? 3\n",
+      "28.274333882308138\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing the proper library\n",
+    "import math\n",
+    "\n",
+    "# Defining the function\n",
+    "def circlefunc():\n",
+    "    # Taking the user's input (not including specifiers like r < 0, etc)\n",
+    "    r = input('What is your radius? ')\n",
+    "    # Casting input as a float so it can be multiplied with pi imported from Math\n",
+    "    r = float(r)\n",
+    "    print(math.pi * (r ** 2))\n",
+    "    \n",
+    "# Calling the function\n",
+    "circlefunc()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## #3 Write a function that takes a list of numbers and returns True of all number in the list are unique and returns False if the list contains duplicate numbers. \n",
+    "\n",
     "* Hint, maybe think of using a set()\n",
     "\n",
     "Input:  input_list = [2,4,5,5,7,9]\n",
@@ -54,10 +100,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define the function \n",
+    "def any_duplicates(numbers_list):\n",
+    "    \n",
+    "    # Convert the list to a set to remove duplicates\n",
+    "    unique_set = set(numbers_list)\n",
+    "    \n",
+    "    # Compare the length of any_duplicates to _unique set to see if they are equal\n",
+    "    return len(unique_set) == len(numbers_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage without duplicates:\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "print(any_duplicates(numbers)) \n",
+    "\n",
+    "# Example usage with duplicates:\n",
+    "numbers_with_duplicates = [1, 2, 3, 4, 5, 1]\n",
+    "print(any_duplicates(numbers_with_duplicates))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,11 +152,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'D': 74, 'W': 63, 'A': 211, 'Y': 44, 'N': 165, 'E': 274, ' ': 522, 'M': 77, 'I': 185, 'C': 60, 'H': 122, 'L': 126, 'R': 152, 'T': 180, 'J': 8, '.': 26, '(': 12, 'B': 59, 'O': 145, 'S': 152, 'P': 39, '2': 24, '7': 7, ',': 37, '1': 28, '9': 16, '8': 6, ')': 12, '[': 14, ']': 14, 'K': 13, 'F': 44, 'G': 53, 'X': 5, 'U': 66, 'V': 20, '3': 2, '4': 4, '5': 5, '6': 3, '0': 36, '\\n': 6, '-': 6, ';': 1, '!': 1, '—': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "# Open the .txt and place it in a variable\n",
+    "txt = open('/Users/brendancostello/summer-prep-hws/2023-CTP/lil-wayne.txt','r').read()\n",
+    "\n",
+    "# Use the variable to capitalize the entire .txt file\n",
+    "txt = txt.upper()\n",
+    "\n",
+    "# Establish an empty list that we can add to using a loop\n",
+    "chars={}\n",
+    "\n",
+    "# Establish the loop\n",
+    "for word in txt:\n",
+    "    # For every letter, perform an action\n",
+    "    for letter in word:\n",
+    "        # That action is testing whether that letter has already been found\n",
+    "        if letter in chars:\n",
+    "            # And adding to the tally\n",
+    "            chars[letter] += 1\n",
+    "        # Or starts the tally off at 1\n",
+    "        else:\n",
+    "            chars[letter] = 1\n",
+    "            \n",
+    "# Print the final tally for all characters\n",
+    "print(chars)"
    ]
   },
   {
@@ -89,10 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{' ': 522, 'E': 274, 'A': 211, 'I': 185, 'T': 180, 'N': 165, 'R': 152, 'S': 152, 'O': 145, 'L': 126, 'H': 122, 'M': 77, 'D': 74, 'U': 66, 'W': 63, 'C': 60, 'B': 59, 'G': 53, 'Y': 44, 'F': 44, 'P': 39, ',': 37, '0': 36, '1': 28, '.': 26, '2': 24, 'V': 20, '9': 16, '[': 14, ']': 14, 'K': 13, '(': 12, ')': 12, 'J': 8, '7': 7, '8': 6, '\\n': 6, '-': 6, 'X': 5, '5': 5, '4': 4, '6': 3, '3': 2, ';': 1, '!': 1, '—': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Had to look this one up...don't fully understand it if I'm being honest\n",
+    "print(dict(sorted(counter.items(),key=lambda x:x[1],reverse=True)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,11 +232,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 5, 8, 13, 21, 63]\n"
+     ]
+    }
+   ],
    "source": [
-    "list1 = [1, 1, 2, 3, 5, 8, 13, 21]"
+    "# Establish the input list\n",
+    "input_list = [1, 1, 2, 3, 5, 8, 13, 21]\n",
+    "\n",
+    "# Remove the 4th number\n",
+    "removed_number = input_list.pop(3)\n",
+    "\n",
+    "# Create a variable for the final number\n",
+    "last_number = input_list[-1]\n",
+    "result = last_number * removed_number\n",
+    "\n",
+    "# Append the variable to the list\n",
+    "input_list.append(result)\n",
+    "\n",
+    "# Print the output\n",
+    "print(input_list)"
    ]
   },
   {
@@ -131,11 +273,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 15, 21]\n"
+     ]
+    }
+   ],
    "source": [
-    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]"
+    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]\n",
+    "\n",
+    "# Establish a variable for the new list\n",
+    "new_list = []\n",
+    "\n",
+    "# Run through the original list\n",
+    "for i in original_list:\n",
+    "    # Apply the modulo operator to see if there is a remainder after dividing by 3\n",
+    "    if i % 3 == 0:\n",
+    "        # Append each number that does not have a remainder to the new list variable\n",
+    "        new_list.append(i)\n",
+    "        \n",
+    "# Print the new list\n",
+    "print(new_list)"
    ]
   },
   {
@@ -147,11 +310,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 19, 15, 9, 8, 6, 3, 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]"
+    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]\n",
+    "\n",
+    "# Reverse the list\n",
+    "original_list.reverse()\n",
+    "\n",
+    "# Print the list\n",
+    "print(original_list)"
    ]
   },
   {
@@ -165,11 +342,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49]\n"
+     ]
+    }
+   ],
    "source": [
-    "original_list = [1, 2, 3, 4, 5, 6, 7]\n"
+    "original_list = [1, 2, 3, 4, 5, 6, 7]\n",
+    "\n",
+    "# Establish a new list with the squared numbers\n",
+    "new_list = [i ** 2 for i in original_list]\n",
+    "  \n",
+    "# Print the list\n",
+    "print(new_list)"
    ]
   },
   {
@@ -194,12 +385,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 400\n",
+      "20 300\n",
+      "30 200\n",
+      "40 100\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [10, 20, 30, 40]\n",
-    "list2 = [100, 200, 300, 400]"
+    "list2 = [100, 200, 300, 400]\n",
+    "\n",
+    "# Reverse the second list\n",
+    "list2.reverse()\n",
+    "\n",
+    "# Create a loop that runs through each list in the new order\n",
+    "for i in range(len(list1)):\n",
+    "    print(list1[i], list2[i])"
    ]
   },
   {
@@ -214,11 +423,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'love', 'data', 'science', '!']\n"
+     ]
+    }
+   ],
    "source": [
-    "list_of_strings = ['I', 'love', '', '', 'data', '', 'science', '!']\n"
+    "# Establish the list\n",
+    "list_of_strings = ['I', 'love', '', '', 'data', '', 'science', '!']\n",
+    "\n",
+    "# Create a new list that filters out the empty strings\n",
+    "new_list = list(filter(None, list_of_strings))\n",
+    " \n",
+    "# Print the newly filtered list\n",
+    "print(new_list)"
    ]
   },
   {
@@ -234,11 +458,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "sample_dict = {'a': 100, 'b': 999, 'c': 300}\n"
+    "sample_dict = {'a': 100, 'b': 999, 'c': 300}\n",
+    "\n",
+    "if 999 in sample_dict.values():\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)"
    ]
   },
   {
@@ -257,20 +494,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zacharydesario/opt/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# Import Pandas to read the .csv\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Establish a variable to hold the opened .csv\n",
+    "df = pd.read_csv('/Users/brendancostello/summer-prep-hws/2023-CTP/titanic.csv')"
    ]
   },
   {
@@ -282,10 +514,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.69911764705882\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import Numpy to do the mean calculation\n",
+    "import numpy as np\n",
+    "\n",
+    "# Establish the age column into a variable list\n",
+    "ages = df['age']\n",
+    "\n",
+    "# Use the variable to establish a new variable that holds the mean of the list\n",
+    "m_age = np.mean(ages)\n",
+    "\n",
+    "print(m_age)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,16 +547,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.42 80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sort the age values\n",
+    "ages.sort_values()\n",
+    "\n",
+    "# Print the first and last in the sorted list\n",
+    "print(ages.min(), ages.max())"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## How many people embarked from station 'S'?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "644\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the sum \n",
+    "print(sum(df[\"embarked\"]==\"S\"))"
    ]
   },
   {
@@ -332,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
